Made it so DCGM is not installed by default

--- a/config.example/group_vars/all.yml
+++ b/config.example/group_vars/all.yml
@@ -258,7 +258,7 @@ maas_kvm: false
 ################################################################################
 # NVIDIA Datacenter GPU Manager                                                #
 ################################################################################
-install_dcgm: true
+install_dcgm: false
 
 ################################################################################
 # Misc.                                                                        #
