--- a/roles/ood-wrapper/tasks/server.yml
+++ b/roles/ood-wrapper/tasks/server.yml
@@ -215,7 +215,7 @@
 
 - name: fix permissions on regex file
   file:
-    path: "{{ ood_base_dir }}/ood_auth_map/bin/ood_auth_map.regex"
+    path: "{{ ood_base_dir }}/ood_auth_map/bin/ood_auth_map.mapfile"
     mode: 0755
   tags:
     - configure
