--- a/playbooks/slurm-cluster/slurm.yml
+++ b/playbooks/slurm-cluster/slurm.yml
@@ -5,14 +5,14 @@
     - name: facts
 
 # Set root SSH key to allow SSH/ansible when no slurm job running for ansible user
-- hosts: slurm-node
-  become: yes
-  tasks:
-    - name: Add SSH public key to root user authorized keys
-      authorized_key:
-        user: root
-        state: present
-        key: "{{ lookup('file', ansible_ssh_private_key_file | default(lookup('env','HOME') + '/.ssh/id_rsa') + '.pub') }}"
+#- hosts: slurm-node
+#  become: yes
+#  tasks:
+#    - name: Add SSH public key to root user authorized keys
+#      authorized_key:
+#        user: root
+#        state: present
+#        key: "{{ lookup('file', ansible_ssh_private_key_file | default(lookup('env','HOME') + '/.ssh/id_rsa') + '.pub') }}"
 
 # Build slurm first on all nodes
 - hosts: slurm-cluster
