Added the option to use ssl with OOD

--- a/config.example/group_vars/slurm-cluster.yml
+++ b/config.example/group_vars/slurm-cluster.yml
@@ -155,6 +155,10 @@ httpd_use_rewrites: false
 node_uri: /node
 rnode_uri: /rnode
 
+ood_use_ssl: no
+ood_ssl_certificate: ''
+ood_ssl_certificate_key: ''
+
 ################################################################################
 # Allow the User Permission to Set GPU Clocks                                  #
 ################################################################################
