--- a/roles/ood-wrapper/tasks/server.yml
+++ b/roles/ood-wrapper/tasks/server.yml
@@ -101,6 +101,12 @@
   tags:
     - configure
   when: ansible_os_family == 'RedHat'
+  
+- name: install apache2 ssl module
+  apache2_module:
+    state: present
+    name: ssl
+  when: ood_use_ssl | default(false)
 
 - name: restart apache after module install
   systemd:
