Disabled NFS from default setup

--- a/config.example/group_vars/slurm-cluster.yml
+++ b/config.example/group_vars/slurm-cluster.yml
@@ -74,9 +74,9 @@ nfs_mounts:
 
 # Flags for enable/disable of NFS deployment
 #  - Set up an NFS server on nfs-server?
-slurm_enable_nfs_server: true
+slurm_enable_nfs_server: false
 #  - Mount NFS filesystems on nfs-clients?
-slurm_enable_nfs_client_nodes: true
+slurm_enable_nfs_client_nodes: false
 
 # Inventory host groups to use for NFS server or clients
 nfs_server_group: "slurm-master[0]"
