--- a/playbooks/slurm-cluster/fbl-ood.yml
+++ b/playbooks/slurm-cluster/fbl-ood.yml
@@ -1,9 +1,9 @@
 - hosts: slurm-master[0]
   become: yes
   roles:
-    - {role: fbl-ood, is_server: yes, users: fbl-ood-users, use_cas: ood_use_cas}
+    - {role: fbl-ood, is_server: yes, main_user: ansible_user, use_cas: ood_use_cas}
 
-- hosts:
+- hosts: slurm-node
   becomes: yes
   roles:
-    - {role: fbl-ood, is_client: yes, users: fbl-ood-users, use_cas: ood_use_cas}
+    - {role: fbl-ood, is_client: yes, main_user: ansible_user, use_cas: ood_use_cas}
