--- a/roles/ood-wrapper/tasks/ssl.yml
+++ b/roles/ood-wrapper/tasks/ssl.yml
@@ -10,16 +10,16 @@
     mode: 0644
 
 - name: Copy SSL certificate file to SSL directory
-  copy:
-    remote_src: /tmp/ood-portal.crt
-    dest: /etc/apache2/ssl
-    mode: 0644
+  command: cp /tmp/odd-portal.crt /etc/apache2/ssl/ood-portal.crt
+
+- name: Set the permissions for the SSL certificate file
+  command: chmod 400 /etc/apache2/ssl/ood-portal.crt
 
 - name: Copy SSL certificate key file to SSL directory
-  copy:
-    remote_src: /tmp/ood-portal.key
-    dest: /etc/apache2/ssl
-    mode: 0644
+  command: cp /tmp/ood-portal.key /etc/apache2/ssl
+
+- name: Set the permissions for SSL certificate key file
+  command: chmod 400 /etc/apache2/ssl/ood-portal.key
 
 - name: Apply SSL engine to ood portal
   lineinfile:
