--- a/roles/fbl-ood/tasks/main.yml
+++ b/roles/fbl-ood/tasks/main.yml
@@ -19,5 +19,5 @@
 - hosts: slurm-node
   becomes: yes
   roles:
-    - {role: add-fbl-user, is_server: yes, user: ansible_user, new_user: no}
+    - {role: add-fbl-user, is_client: yes, user: ansible_user, new_user: no}
   
