add-fbl-user.sh and rm-fbl-user.sh no longer used

--- a/roles/fbl-ood/tasks/main.yml
+++ b/roles/fbl-ood/tasks/main.yml
@@ -8,8 +8,8 @@
 - name: Copy OOD-APP into OOD apps directory
   command: cp -r /home/ubuntu/fbl-ood/OOD-app /var/www/ood/apps/sys/fbl-ood
 
-- name: Copy fbl-ood scripts to /bin
-  command: cp /home/ubuntu/fbl-ood/bin/* /bin
+#- name: Copy fbl-ood scripts to /bin
+#  command: cp /home/ubuntu/fbl-ood/bin/* /bin
 
 - hosts: slurm-master[0]
   become: yes
