--- a/roles/ood-wrapper/tasks/server.yml
+++ b/roles/ood-wrapper/tasks/server.yml
@@ -224,8 +224,11 @@
   include: ssl.yml
   when: ood_use_ssl | default(false)
 
-- name: replace apache ports (freeing up ports 80 and 443)
-  copy:
-      dest: "/etc/apache2/ports.conf"
-      content: |
-        Listen 9000
+- name: replace apache ports in /etc/apache2/ports.conf (freeing up ports 80 and 443)
+  command: echo "Listen 9000" > /etc/apache2/port.conf
+
+- name: change 80->9000 in /etc/apache2/sites-enabled/000-default.conf
+  command: sed 's/80/9000/g' /etc/apache2/sites-enabled/000-default.conf
+
+- name: change 443->9000 in /etc/apache2/sites-enabled/000-default.conf
+  command: sed 's/443/9000/g' /etc/apache2/sites-enabled/000-default.conf
