Added when statements for each command

--- a/roles/add-fbl-user/tasks/main.yml
+++ b/roles/add-fbl-user/tasks/main.yml
@@ -1,5 +1,7 @@
 - name: Add new FBL user on server
   include: server.yml
+  when: is_server | default(false)
 
 - name: Add new FBL user on client
   include: client.yml
+  when: is_client | default(false)
