--- a/roles/add-fbl-user/defaults/main.yml
+++ b/roles/add-fbl-user/defaults/main.yml
@@ -1,3 +1,3 @@
-ood_passwd_file: "/etc/apache2/.htpasswd"
-ood_unix_group: "ood"
-ood_slurm_account: "ood"
+ood-passwd-file: "/etc/apache2/.htpasswd"
+ood-unix-group: "ood"
+ood-slurm-account: "ood"
