Added task to set up FBL-OOD

--- a/playbooks/slurm-cluster.yml
+++ b/playbooks/slurm-cluster.yml
@@ -124,6 +124,10 @@
 - include: slurm-cluster/open-ondemand.yml
   when: install_open_ondemand
 
+# Set up FBL-OOD
+- include: slurm-cluster/fbl-ood.yml
+  when: install_open_ondemand
+
 # Set Permissions to adjust GPU Clocks speeds
 - include: utilities/gpu-clocks.yml
   when: allow_user_set_gpu_clocks
