--- a/roles/fbl-ood/tasks/client.yml
+++ b/roles/fbl-ood/tasks/client.yml
@@ -1,3 +1,6 @@
-- name: Add fbl user on client
-  roles:
-    - {role: add-fbl-user, is_client: yes, user: ansible_user, new_user: no}
+#- name: Create FBL directory (under which fbl user directories are housed) on client
+#  command: echo TODO
+
+#- name: Add main fbl user on client
+#  roles:
+#    - {role: add-fbl-user, is_client: yes, user: ansible_user, new_user: no}
