--- a/roles/add-fbl-user/tasks/server.yml
+++ b/roles/add-fbl-user/tasks/server.yml
@@ -1,8 +1,11 @@
 - name: Add UNIX user
-  command:
-    - useradd -m -u "{{ user }}" -p `mkpasswd "{{ password }}"` -s \bin\bash -d "/home/{{ user }}" "{{ user }}"
-    - usermod -aG "{{ ood-unix-group }}" "{{ user }}"
+  command: useradd -m -u "{{ user }}" -p `mkpasswd "{{ password }}"` -s \bin\bash -d "/home/{{ user }}" "{{ user }}"
   when: new_user | default(false)
+
+- name: Modify permissions for added UNIX user
+  command: usermod -aG "{{ ood-unix-group }}" "{{ user }}"
+  when: new_user | default(false)
+  
 
 - name: Set permissions for /home/NEWUSER
   command: chmod go-rwx "/home/{{ user }}"
