Changed syntax of variables

--- a/roles/add-fbl-user/tasks/client.yml
+++ b/roles/add-fbl-user/tasks/client.yml
@@ -3,7 +3,7 @@
   when: new_user | default(false)
 
 - name: Modify unix user permissions on client
-  command: usermod -aG "{{ ood-unix-group }}" "{{ user }}"
+  command: usermod -aG "{{ ood_unix_group }}" "{{ user }}"
   when: new_user | default(false)
 
 - name: Configure SSH to allow new user
