--- a/roles/fbl-ood/tasks/server.yml
+++ b/roles/fbl-ood/tasks/server.yml
@@ -12,7 +12,7 @@
 #  command: cp /home/ubuntu/fbl-ood/bin/* /bin
 
 - name: Adding ood slurm account
-  command: sacctmgr add account "{{ ood_slurm_account }}"
+  command: sacctmgr add account "{{ ood_slurm_account }}" "Description=" "Organization={{ ood_slurm_account}}"
 
 - name: Add main fbl user on server
   include_role:
