Edited Add ood slurm account task

--- a/roles/fbl-ood/tasks/server.yml
+++ b/roles/fbl-ood/tasks/server.yml
@@ -11,8 +11,8 @@
 #- name: Copy fbl-ood scripts to /bin
 #  command: cp /home/ubuntu/fbl-ood/bin/* /bin
 
-- name: Adding ood slurm account
-  command: sacctmgr add account "{{ ood_slurm_account }}" "Description=" "Organization={{ ood_slurm_account}}"
+- name: Add ood slurm account
+  command: sacctmgr add account "{{ ood_slurm_account }}" "Description={{ ood_slurm_account }}" "Organization={{ ood_slurm_account}}"
 
 - name: Add main fbl user on server
   include_role:
