--- a/roles/fbl-ood/tasks/server.yml
+++ b/roles/fbl-ood/tasks/server.yml
@@ -12,7 +12,7 @@
 #  command: cp /home/ubuntu/fbl-ood/bin/* /bin
 
 - name: Add ood slurm account
-  command: sacctmgr add account "{{ ood_slurm_account }}" "Description={{ ood_slurm_account }}" "Organization={{ ood_slurm_account}}"
+  command: sudo sacctmgr add account "{{ ood_slurm_account }}" "Description={{ ood_slurm_account }}" "Organization={{ ood_slurm_account}}"
 
 - name: Add main fbl user on server
   include_role:
