--- a/roles/fbl-ood/tasks/server.yml
+++ b/roles/fbl-ood/tasks/server.yml
@@ -12,8 +12,11 @@
 #  command: cp /home/ubuntu/fbl-ood/bin/* /bin
 
 - name: Add ood slurm account
-  command: sudo sacctmgr add account "{{ ood_slurm_account }}" "Description={{ ood_slurm_account }}" "Organization={{ ood_slurm_account}}"
-
+  command: sacctmgr -i add account "{{ood_slurm_account}}" Description="{{ood_slurm_account}}" Organization="{{ood_slurm_account}}"
+  register: create_account_result
+  failed_when: "create_account_result.rc != 0 and 'Nothing new added' not in create_account_result.stdout"
+  changed_when: "'Nothing new added' not in create_account_result.stdout"
+  
 - name: Add main fbl user on server
   include_role:
     name: add-fbl-user
