--- a/roles/fbl-ood/defaults/main.yml
+++ b/roles/fbl-ood/defaults/main.yml
@@ -1,3 +1,6 @@
 ood_slurm_account: "ood"
 
 # TODO: Connect this with ood_slurm_account default variable in add-fbl-user and rm-fbl-user
+
+is_server: no
+is_client: no
