Added CAS-related variables

--- a/roles/ood-wrapper/vars/ubuntu.yml
+++ b/roles/ood-wrapper/vars/ubuntu.yml
@@ -2,8 +2,13 @@ install_from_src: true
 
 ood_apache_service_name: apache2
 ood_htpasswd_file: /etc/apache2/.htpasswd
+
 ood_use_ssl: no
+
 ood_use_cas: no
+cas_cookie_path: "/tmp/"
+cas_login_url: "https://cas.columbia.edu/cas/login"
+cas_validate_url: "https://cas.columbia.edu/cas/p3/serviceValidate"
 
 ood_portal_generator: false
 
