--- a/roles/fbl-ood/tasks/client.yml
+++ b/roles/fbl-ood/tasks/client.yml
@@ -2,6 +2,12 @@
   file:
     path: "{{ fbl_directory }}"
 
+- name: Pull FBL docker image from Docker Hub
+  docker_image:
+    name: fruitflybrain/fbl
+    tag: slurm
+    state: present
+
 #- name: Add main fbl user on client
 #  roles:
 #    - {role: add-fbl-user, is_client: yes, user: ansible_user, new_user: no}
