Added task to remove FBL user directory

--- a/roles/rm-fbl-user/tasks/client.yml
+++ b/roles/rm-fbl-user/tasks/client.yml
@@ -20,4 +20,6 @@
     state: restarted
 
 - name: Remove FBL user directory
-  command: echo TODO
+  file:
+    path: "{{ fbl_directory }}/{{ user }}"
+    state: absent
