--- a/roles/fbl-ood/tasks/client.yml
+++ b/roles/fbl-ood/tasks/client.yml
@@ -8,6 +8,19 @@
     tag: slurm
     state: present
 
-#- name: Add main fbl user on client
-#  roles:
-#    - {role: add-fbl-user, is_client: yes, user: ansible_user, new_user: no}
+- name: Create FBL docker container
+  command: docker create fruitflybrain/fbl:slurm /bin/bash
+  register: fbl_instance_id
+
+- name: Copy FBL docker container contents into FBL directory
+  command: docker cp "{{ fbl_instance_id }}:/" "{{ fbl_directory }}/fbl_image"
+
+- name: Kill FBL docker container
+  command: docker kill "{{ fbl_instance_id }}"
+
+- name: Remove FBL docker image
+  command: docker image rm fruitflybrain/fbl:slurm
+
+- name: Add main fbl user on client
+  roles:
+    - {role: add-fbl-user, is_client: yes, user: ansible_user, new_user: no}
