--- a/roles/fbl-ood/tasks/client.yml
+++ b/roles/fbl-ood/tasks/client.yml
@@ -22,5 +22,9 @@
   command: docker image rm fruitflybrain/fbl:slurm
 
 - name: Add main fbl user on client
-  roles:
-    - {role: add-fbl-user, is_client: yes, user: ansible_user, new_user: no}
+  include_role:
+    name: add-fbl-user
+  vars:
+    is_client: yes
+    user: ansible_user
+    new_user: no
