Added ood_unix_group variable

--- a/roles/fbl-ood/defaults/main.yml
+++ b/roles/fbl-ood/defaults/main.yml
@@ -1,4 +1,5 @@
 ood_slurm_account: "ood"
+ood_unix_group: "ood"
 
 # TODO: Connect this with ood_slurm_account default variable in add-fbl-user and rm-fbl-user
 
