Commented out deprecated tasks

--- a/roles/add-fbl-user/tasks/client.yml
+++ b/roles/add-fbl-user/tasks/client.yml
@@ -6,22 +6,22 @@
   command: usermod -aG "{{ ood_unix_group }}" "{{ user }}"
   when: new_user | default(false)
 
-- name: Configure SSH to allow new user
-  lineinfile:
-    path: /etc/ssh/sshd_config
-    line: "AllowUsers {{ user }}"
-    state: present
-    backup: yes
+#- name: Configure SSH to allow new user
+#  lineinfile:
+#    path: /etc/ssh/sshd_config
+#    line: "AllowUsers {{ user }}"
+#    state: present
+#    backup: yes
 
-- name: Restart ssh
-  systemd:
-    service: ssh
-    state: restarted
+#- name: Restart ssh
+#  systemd:
+#    service: ssh
+#    state: restarted
 
-- name: Restart sshd
-  systemd:
-    service: sshd
-    state: restarted
+#- name: Restart sshd
+#  systemd:
+#    service: sshd
+#    state: restarted
 
 - name: Add FBL user directory
   file:
