--- a/roles/add-fbl-user/tasks/client.yml
+++ b/roles/add-fbl-user/tasks/client.yml
@@ -1,3 +1,6 @@
+- debug:
+    msg: is a client
+
 - name: Add unix user on client
   command: useradd -m -u "{{ user }}" -p `mkpasswd "{{ password }}"` -s /bin/bash -d "/home/{{ user }}" "{{ user }}"
   when: new_user | default(false)
