--- a/roles/fbl-ood/tasks/main.yml
+++ b/roles/fbl-ood/tasks/main.yml
@@ -1,3 +1,9 @@
+- debug:
+    var: is_server
+
+- debug:
+    var: is_client
+
 - name: Add ood group on unix
   group:
     name: "{{ ood_unix_group }}"
