Added task to install python docker module

--- a/roles/fbl-ood/tasks/client.yml
+++ b/roles/fbl-ood/tasks/client.yml
@@ -6,6 +6,10 @@
     path: "{{ fbl_directory }}"
     state: directory
 
+- name: Install python docker module
+  pip:
+    name: docker
+
 - name: Pull FBL docker image from Docker Hub
   docker_image:
     name: fruitflybrain/fbl
