Replaced some tasks

--- a/roles/fbl-ood/tasks/client.yml
+++ b/roles/fbl-ood/tasks/client.yml
@@ -17,14 +17,21 @@
     state: present
 
 - name: Create FBL docker container
-  command: docker create fruitflybrain/fbl:slurm /bin/bash
+  command: docker create fruitflybrain/fbl:slurm /bin/bash --name fbl
   register: fbl_instance_id
 
 - name: Copy FBL docker container contents into FBL directory
   command: docker cp "{{ fbl_instance_id.stdout }}:/" "{{ fbl_directory }}/fbl_image"
 
 - name: Kill FBL docker container
-  command: docker kill "{{ fbl_instance_id.stdout }}"
+  docker_container:
+    name: fbl
+    state: stopped
+
+#command: docker kill "{{ fbl_instance_id.stdout }}"
 
 - name: Remove FBL docker image
-  command: docker image rm fruitflybrain/fbl:slurm
+  docker_image:
+    name: fruitflybrain/fbl
+    tag: slurm
+    state: absent
