--- a/roles/nfs/tasks/server.yml
+++ b/roles/nfs/tasks/server.yml
@@ -1,4 +1,13 @@
 ---
+- name: configure ports
+    copy:
+      dest: "/etc/sysconfig/nfs"
+      content: |
+        MOUNTD_PORT=9500
+        STATD_PORT=9501
+        LOCKD_UDP_PORT=9502
+        LOCKD_TCP_PORT=9503
+
 - name: install ubuntu packages
   apt:
     name: nfs-kernel-server
