--- a/roles/nfs/tasks/client.yml
+++ b/roles/nfs/tasks/client.yml
@@ -1,4 +1,13 @@
 ---
+
+- name: configure ports
+    copy:
+      dest: "/etc/sysconfig/nfs"
+      content: |
+        STATD_PORT=9501
+        LOCKD_UDP_PORT=9502
+        LOCKD_TCP_PORT=9503
+
 - name: ensure mountpoint exists
   file:
     path: '{{ item.mountpoint }}'
