--- a/roles/nfs/tasks/client.yml
+++ b/roles/nfs/tasks/client.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: create configuration directory
+  file:
+    path: /etc/sysconfig
+    state: directory
+    mode: '0755'
+
 - name: configure ports
   copy:
     dest: "/etc/sysconfig/nfs"
