--- a/roles/nfs/tasks/server.yml
+++ b/roles/nfs/tasks/server.yml
@@ -1,4 +1,10 @@
 ---
+- name: create config directory
+  file:
+    path: /etc/sysconfig
+    state: directory
+    mode: '0755'
+
 - name: configure ports
   copy:
     dest: "/etc/sysconfig/nfs"
