--- a/roles/fbl-ood/tasks/server.yml
+++ b/roles/fbl-ood/tasks/server.yml
@@ -11,6 +11,11 @@
 #- name: Copy OOD-APP into OOD apps directory
 #  command: cp -r /home/ubuntu/fbl-ood/OOD-app /var/www/ood/apps/sys/fbl-ood
 
+- name: Remove fbl app if it previously existed
+  file:
+    path: /var/www/ood/apps/sys/fbl
+    state: absent
+
 - name: Add fbl app to ood
   copy:
        src: fbl
