--- a/roles/fbl-ood/tasks/server.yml
+++ b/roles/fbl-ood/tasks/server.yml
@@ -17,7 +17,7 @@
 - name: Add fbl app to ood
   copy:
        src: fbl
-       dest: /var/www/ood/apps/sys/fbl
+       dest: /var/www/ood/apps/sys
 
 - name: Make sure before.sh.erb has the correct permissions
   file:
